--- a/.github/workflows/update-prediction-data.yml
+++ b/.github/workflows/update-prediction-data.yml
@@ -16,6 +16,8 @@ jobs:
     steps:
     - name: Checkout repository
       uses: actions/checkout@v3
+      with:
+        token: ${{ secrets.GITHUB_TOKEN }}
       
     - name: Set up Python
       uses: actions/setup-python@v4
@@ -35,4 +37,31 @@ jobs:
         git config --global user.name 'GitHub Action'
         git config --global user.email 'action@github.com'
         git add data/prediction/
-        git diff --quiet && git diff --staged --quiet || (git commit -m "Update tide prediction data $(date +'%Y-%m-%d')" && git push)
+        
+        # 変更があるかチェック
+        if git diff --staged --quiet; then
+          echo "No changes to commit"
+          exit 0
+        fi
+        
+        # コミット
+        git commit -m "Update tide prediction data $(date +'%Y-%m-%d')"
+        
+        # プッシュ（競合時は自動的にpull & retry）
+        max_retries=5
+        retry_count=0
+        
+        while [ $retry_count -lt $max_retries ]; do
+          if git push; then
+            echo "Push successful"
+            exit 0
+          else
+            echo "Push failed, pulling and retrying... (attempt $((retry_count + 1))/$max_retries)"
+            git pull --rebase origin main
+            retry_count=$((retry_count + 1))
+            sleep 5
+          fi
+        done
+        
+        echo "Failed to push after $max_retries attempts"
+        exit 1
