--- a/.github/workflows/deploy-github-pages.yml
+++ b/.github/workflows/deploy-github-pages.yml
@@ -13,6 +13,11 @@ on:
       - '.github/workflows/deploy-github-pages.yml'
   workflow_dispatch:
 
+# 同時実行を防ぐ
+concurrency:
+  group: pages
+  cancel-in-progress: false
+
 permissions:
   contents: read
   pages: write
