--- a/.github/workflows/update-observed-data.yml
+++ b/.github/workflows/update-observed-data.yml
@@ -1,67 +1,62 @@
 # .github/workflows/update-observed-data.yml
-# 30分ごとに実測データを取得
-
 name: Update Observed Tide Data
 
 on:
-  schedule:
-    # 30分ごとに実行 (0,30分)
-    - cron: '0,30 * * * *'
-  workflow_dispatch: # 手動実行も可能
+  repository_dispatch:
+    types: [trigger-observed]  # ★合言葉を「trigger-observed」にする
+  workflow_dispatch:           # 手動実行用
 
 jobs:
   fetch-observed-data:
     runs-on: ubuntu-latest
-    
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v4
-      with:
-        token: ${{ secrets.GITHUB_TOKEN }}
-      
-    - name: Set up Python
-      uses: actions/setup-python@v5
-      with:
-        python-version: '3.10'
-        
-    - name: Install dependencies
-      run: |
-        pip install pandas requests beautifulsoup4
-        
-    - name: Fetch observed tide data
-      run: |
-        python scripts/fetch_observed_tide.py
-        
-    - name: Commit and push if changed
-      run: |
-        git config --global user.name 'GitHub Action'
-        git config --global user.email 'action@github.com'
-        git add data/observed/
-        
-        # 変更があるかチェック
-        if git diff --staged --quiet; then
-          echo "No changes to commit"
-          exit 0
-        fi
-        
-        # コミット
-        git commit -m "Update observed tide data $(date +'%Y-%m-%d %H:%M')"
-        
-        # プッシュ（競合時は自動的にpull & retry）
-        max_retries=5
-        retry_count=0
-        
-        while [ $retry_count -lt $max_retries ]; do
-          if git push; then
-            echo "Push successful"
+      - name: Checkout repository
+        uses: actions/checkout@v4
+        with:
+          # ★重要: これを PA_TOKEN に変えないと、Pagesのデプロイが自動で走りません
+          token: ${{ secrets.naya-tidal-flat-token }}
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.10'
+
+      - name: Install dependencies
+        run: |
+          pip install pandas requests beautifulsoup4
+
+      - name: Fetch observed tide data
+        run: |
+          python scripts/fetch_observed_tide.py
+
+      - name: Commit and push if changed
+        run: |
+          git config --global user.name 'GitHub Action'
+          git config --global user.email 'action@github.com'
+          git add data/observed/
+
+          # 変更があるかチェック
+          if git diff --staged --quiet; then
+            echo "No changes to commit"
             exit 0
-          else
-            echo "Push failed, pulling and retrying... (attempt $((retry_count + 1))/$max_retries)"
-            git pull --rebase origin main
-            retry_count=$((retry_count + 1))
-            sleep 5
           fi
-        done
-        
-        echo "Failed to push after $max_retries attempts"
-        exit 1
+
+          # コミット
+          git commit -m "Update observed tide data $(date +'%Y-%m-%d %H:%M')"
+
+          # プッシュ（競合時は自動的にpull & retry）
+          max_retries=5
+          retry_count=0
+          while [ $retry_count -lt $max_retries ]; do
+            if git push; then
+              echo "Push successful"
+              exit 0
+            else
+              echo "Push failed, pulling and retrying... (attempt $((retry_count + 1))/$max_retries)"
+              git pull --rebase origin main
+              retry_count=$((retry_count + 1))
+              sleep 5
+            fi
+          done
+          echo "Failed to push after $max_retries attempts"
+          exit 1
