--- a/.github/workflows/deploy-github-pages.yml
+++ b/.github/workflows/deploy-github-pages.yml
@@ -1,12 +1,14 @@
 # .github/workflows/deploy-github-pages.yml
-# データ更新時にGitHub Pagesをデプロイ
-
 name: Deploy to GitHub Pages
 
 on:
   push:
     branches:
       - main
+    paths:
+      - 'data/**'
+      - 'index.html'
+      - '.github/workflows/deploy-github-pages.yml'
   workflow_dispatch:
 
 # 同時実行を防ぐ
@@ -23,16 +25,16 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout
-      uses: actions/checkout@v4
-      
-    - name: Setup Pages
-      uses: actions/configure-pages@v5
-      
-    - name: Upload artifact
-      uses: actions/upload-pages-artifact@v3
-      with:
-        path: '.'
-        
-    - name: Deploy to GitHub Pages
-      uses: actions/deploy-pages@v4
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Setup Pages
+        uses: actions/configure-pages@v5
+
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v3
+        with:
+          path: '.'
+
+      - name: Deploy to GitHub Pages
+        uses: actions/deploy-pages@v4
