--- a/.github/workflows/update-observed-data.yml
+++ b/.github/workflows/update-observed-data.yml
@@ -14,7 +14,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           # ★重要: これを PA_TOKEN に変えないと、Pagesのデプロイが自動で走りません
-          token: ${{ secrets.naya-tidal-flat-token }}
+          token: ${{ secrets.NAYATOKEN }}
 
       - name: Set up Python
         uses: actions/setup-python@v5
