--- a/.github/workflows/update-prediction-data.yml
+++ b/.github/workflows/update-prediction-data.yml
@@ -14,7 +14,7 @@ jobs:
         uses: actions/checkout@v4 # v3→v4推奨
         with:
           # ★重要: 作成したPATを使うことで、Push時に他のAction(Pages)がトリガーされます
-          token: ${{ secrets.naya-tidal-flat-token }} 
+          token: ${{ secrets.NAYATOKEN }} 
 
       - name: Set up Python
         uses: actions/setup-python@v4
